test/invalid/baseline/sequence-empty.txt
Syntax error at line 1 in sequence-empty.webidl:
typedef sequence<> empty;
                 ^ Missing sequence subtype
